--- a/.github/workflows/appbasicapi.yaml
+++ b/.github/workflows/appbasicapi.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Container
+name: basicapi
 
 # Controls when the workflow will run
 on:
@@ -8,8 +8,12 @@ on:
   push:
     branches: [ main ]
     tags: [ 'v*.*.*' ]
+    paths:
+      - "appbasicapi/**"
   pull_request:
     branches: [ main ]
+    paths:
+      - "appbasicapi/**"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
