--- a/.github/workflows/appappconfig.yaml
+++ b/.github/workflows/appappconfig.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: blob
+name: appconfig
 
 # Controls when the workflow will run
 on:
@@ -9,11 +9,11 @@ on:
     branches: [ main ]
     tags: [ 'v*.*.*' ]
     paths:
-      - "appblob/**"
+      - "appappconfig/**"
   pull_request:
     branches: [ main ]
     paths:
-      - "appblob/**"
+      - "appappconfig/**"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -21,8 +21,8 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}-blob
-  WORKINGDIR: appblob
+  IMAGE_NAME: ${{ github.repository }}-appconfig
+  WORKINGDIR: appappconfig
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
