--- a/apptimerapi/Dockerfile
+++ b/apptimerapi/Dockerfile
@@ -10,4 +10,5 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./app /code/app
 
-CMD ["fastapi", "run", "app/main.py", "--port", "80"]
+#CMD ["fastapi", "run", "app/main.py", "--port", "80"]
+CMD ["uvicorn", "app.main:app", "--port", "80", "--host", "0.0.0.0"]
